--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
 
 <body>
   <h1>Hello World!</h1>
+
+  <a href="/movie">Movie Page</a>
+  <div id="movie"></div>
+  <a href="/music">Music Page</a>
+  <div id="music"></div>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
