--- a/public/movie.html
+++ b/public/movie.html
@@ -9,5 +9,8 @@
 <body>
   <h1>Movie Page</h1>
   <a href="/">Home Page</a>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
